# Liteyuki-Shelf

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Cargo.toml
apps/api/src/: app_state.rs  handlers.rs  main.rs  models.rs  sample_data.rs  storage.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css
apps/web/src/components/: AdminReviewPanel.tsx  AuthorEditor.tsx  BookDetail.tsx  BookList.tsx  RoleTabs.tsx  RoleWorkspace.tsx  SummaryCards.tsx  UploadPanel.tsx
scripts/: dev-desktop.ps1  dev-tauri.ps1
