[workspace]
members = ["apps/api", "apps/desktop/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.7"
actix-web = "4.11"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
epub = "2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
uuid = { version = "1", features = ["serde", "v4"] }
