[package]
name = "liteyuki-shelf-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix-cors.workspace = true
actix-files.workspace = true
actix-multipart.workspace = true
actix-web.workspace = true
anyhow.workspace = true
chrono.workspace = true
epub.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
